--- a/ansiblemain.yml
+++ b/ansiblemain.yml
@@ -27,6 +27,6 @@
       become_user: root
 
     - name: Copy the code from github to the /var/www/html
-      shell: |
+      shell: |  #basic linux shell
         cd /var/www/html
         git clone https://github.com/cankush625/Web.git
